--- a/index.html
+++ b/index.html
@@ -121,17 +121,6 @@
             <div class="row">
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
-					<a href="categories.html#medical-devices">
-                     <div class="post-media wow fadeIn">
-                        <img src="images/categories/medical-devices.png" alt="" class="img-responsive">
-                     </div>
-                     <h3 style="height:60px;">Medical Devices</h3>
-					 </a>
-                  </div>
-                  <!-- end service -->
-               </div>
-               <div class="col-md-2 col-sm-3 col-xs-4">
-                  <div class="service-widget">
 					<a href="categories.html#medical-consumables">
                      <div class="post-media wow fadeIn">
                         <img src="images/categories/medical-consumables.png" alt="" class="img-responsive">
@@ -143,11 +132,11 @@
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
-				  <a href="categories.html#medical-aid">
+					<a href="categories.html#medical-devices">
                      <div class="post-media wow fadeIn">
-                        <img src="images/categories/medical-aid.png" alt="" class="img-responsive">
+                        <img src="images/categories/medical-devices.png" alt="" class="img-responsive">
                      </div>
-                     <h3 style="height:60px;">Medical Aids</h3>
+                     <h3 style="height:60px;">Medical Devices</h3>
 					 </a>
                   </div>
                   <!-- end service -->
@@ -165,12 +154,23 @@
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
-				  <a href="categories.html#medical-equipment">
                      <div class="post-media wow fadeIn">
+					 
+				  <div class="not-avail">Not Available</div>
+                        <img src="images/categories/medical-aid.png" alt="" class="img-responsive">
+                     </div>
+                     <h3 style="height:60px;">Medical Aids</h3>
+                  </div>
+                  <!-- end service -->
+               </div>
+               <div class="col-md-2 col-sm-3 col-xs-4">
+                  <div class="service-widget">
+                     <div class="post-media wow fadeIn">
+					 
+				  <div class="not-avail">Not Available</div>
                         <img src="images/categories/medical-equipment.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Medical Equipments</h3>
-					 </a>
                   </div>
                   <!-- end service -->
                </div>
