--- a/categories.html
+++ b/categories.html
@@ -124,7 +124,7 @@
 				<i class="glyphicon glyphicon-list"></i>
 				<span>Filter Category</span>
 				</button>
-				<div class="all section wow fadeIn">
+				<div id="ppe-kits" class="all section wow fadeIn">
 					<div class="container">
 						<div class="heading">
 							<h2>Complete PPE Kit</h2>
@@ -165,7 +165,7 @@
 				<div class="all section wow fadeIn">
 					<div class="container">
 						<div class="heading">
-							<h2>All Products</h2>
+							<h2>Not Categorised Products</h2>
 						</div>
 						<!-- end row -->
 						<div class="row">
@@ -289,20 +289,6 @@
 								</div>
 								<!-- end service -->
 							</div>
-						</div>
-						<!-- end row -->
-					</div>
-					<!-- end container -->
-				</div>
-				<div id="medical-equipment medical-devices medical-consumables medical-aids hospital-furnitures" class="notfound section wow fadeIn">
-					<div class="container">
-						<div class="heading">
-							<h2>Category Not Found</h2>
-						</div>
-						<!-- end row -->
-						<div class="row">
-							<p class="center info">Products Under this Category are not Available yet!</p>
-							<p class="center">Please check back later!</p>
 						</div>
 						<!-- end row -->
 					</div>
