--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -6,21 +6,39 @@
 </div>
 <ul class="dismiss-ul list-unstyled components">
 	<li>
-		<a href="#" onclick="go('.all')">All</a>
+		<a href="#" onclick="go('.all')"><i class="fa fa-home"></i> &nbsp All</a>
 	</li>
 	<li>
-		<a href="#medical-devices" onclick="go('#medical-devices')">Medical Devices <i class="right glyphicon glyphicon-remove"></i></a>
+		<a href="#medical-consumables-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-consumables')">Medical Consumables</a>
+		<ul class="collapse list-unstyled" id="medical-consumables-sm">
+			<li><a href="#">CoverAll Suit</a></li>
+			<li><a href="#">Mask</a></li>
+			<li><a href="#">Gloves</a></li>
+			<li><a href="#">Face Shield</a></li>
+			<li><a href="#">Goggles</a></li>
+			<li><a href="#">Sanitizers</a></li>
+		</ul>
 	</li>
 	<li>
-		<a href="#medical-equipment" onclick="go('#medical-equipment')">Medical Equipments <i class="right glyphicon glyphicon-eye-close"></i></a>
+		<a href="#medical-devices-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-devices')">Medical Devices</a>
+		<ul class="collapse list-unstyled" id="medical-devices-sm">
+			<li><a href="#">Automatic Sanitiser</a></li>
+			<li><a href="#">Sanitizer Mop</a></li>
+			<li><a href="#">Fogging Machine</a></li>
+			<li><a href="#">Pocket Devices</a></li>
+			<li><a href="#">Spray Machine</a></li>
+		</ul>
 	</li>
 	<li>
-		<a href="#">Medical Consumables</a>
+		<a href="#ppe-kits" onclick="go('#ppe-kits')">PPE Kits</a>
 	</li>
 	<li>
-		<a href="#">Medical Aids</a>
+		<a href="#hospital-furniture" onclick="go('#hospital-furniture')">Hospital Furnitures</a>
 	</li>
 	<li>
-		<a href="#">Hospital Furnitures</a>
+		<a>Medical Aids</a>
+	</li>
+	<li>
+		<a>Medical Equipments</a>
 	</li>
 </ul>
