--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -33,10 +33,10 @@
 			</ul>
 		</li>
 		<li>
-			<a href="#ppe-kits" onclick="go('#ppe-kits')">PPE Kits</a>
+			<a onclick="go('#ppe-kits')">PPE Kits</a>
 		</li>
 		<li>
-			<a href="#hospital-furniture" onclick="go('#hospital-furniture')">Hospital Furnitures</a>
+			<a onclick="go('#hospital-furnitures')">Hospital Furnitures</a>
 		</li>
 		<li>
 			<a>Medical Aids</a>
