--- a/categories.html
+++ b/categories.html
@@ -55,7 +55,7 @@
 				<header>
 					<div class="header-top wow fadeIn">
 						<div class="container">
-							<a class="navbar-brand" href="index.html" style="padding: 8px 10px"><img src="images/logo.png" alt="image"></a>
+							<a class="navbar-brand" href="index.html" style="padding: 8px 10px"><img src="images/logo-header.png" alt="Logo"></a>
 							<div class="right-header">
 								<div class="header-info">
 									<div class="info-inner">
@@ -79,7 +79,7 @@
 								<div id="navbar" class="navbar-collapse collapse">
 									<ul class="nav navbar-nav">
 										<li><a href="index.html">Home</a></li>
-										<li><a class="active sidebarActivate" href="#">Categories</a></li>
+										<li><a class="active sidebarActivate" href="#">Products</a></li>
 										<li><a href="index.html#enquire">Enquire</a></li>
 										<!-- <li><a href="index.html#testimonials">Testimonials</a></li> -->
 										<li><a href="index.html#getintouch">Contact Us</a></li>
