--- a/categories.html
+++ b/categories.html
@@ -79,6 +79,7 @@
 								<div id="navbar" class="navbar-collapse collapse">
 									<ul class="nav navbar-nav">
 										<li><a href="index.html">Home</a></li>
+										<li><a href="index.html/#aboutus">About Us</a></li>
 										<li><a class="active sidebarActivate" href="#">Products</a></li>
 										<li><a href="index.html#enquire">Enquire</a></li>
 										<!-- <li><a href="index.html#testimonials">Testimonials</a></li> -->
