--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                   <div id="navbar" class="navbar-collapse collapse">
                      <ul class="nav navbar-nav">
                         <li><a class="active" href="index.html">Home</a></li>
+                        <li><a data-scroll href="#aboutus">About Us</a></li>
                         <li><a data-scroll href="categories.html">Products</a></li>
                         <li><a data-scroll href="#enquire">Enquire</a></li>
                         <li><a data-scroll href="#getintouch">Contact Us</a></li>
@@ -216,6 +217,28 @@
       </div>
 	  
 	  <hr class="hr1">
+		<div id="aboutus" class="section wow fadeIn">
+         <div class="container brnd cert">
+            <div class="heading">
+			   <h2>About Us</h2>
+            </div>
+			<div class="row">
+				<p>We are committed to provide BEST quality, in-time delivery and a very happy experience to our customers.</p>
+
+<h4>What We Do</h4>				
+<p>We manufacture and supply medical equipments for coronavirus (SARS Covid19) like Mask (3ply, 4ply, 5ply and 6 ply), Gloves (latex and nitrile), Sanitisers (ethyl alcohol and isopropyl alcohol), Sanitising machines (all sizes and categories), Thermal Scanner, Fogging machine etc.  We sell in wholesale to distributors / dealers all over the world who sell our products in their local markets. </p>
+
+<h4>Who We Are</h4>
+<p>We are beyond the mandatory ISO 9001:2015, and CE norms to assure our products are consistently good and effective. Apart from product quality, we are also reputed for prompt delivery, buyers' friendly policies, and the team which includes some of the most experienced business and technology professionals.
+It itself is a testimony to acceptances of our core competencies in quality control, product design & development, prototyping, packaging and sterilisation.</p>
+
+<h4>Our Policy</h4>
+<p>We believe in providing quality of highest level. The fact that we are in a business which is directly linked to the health and well being of the people makes us more responsible company, and no matter what, with no compromises. no doubt, life is precious.
+Not only our products abide to ISO 9001:2015, and CE standards, but we also consistently exceed all national and international quality norms. We boast of our most modern factories which have the state of the art manufacturing facilities. Also, rigorous quality assurance resources ensure stricter quality control.</p>
+			</div>
+		 </div>
+		</div>
+		
 		<div class="section wow fadeIn">
          <div class="container brnd cert">
             <div class="heading">
