--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <!-- end section -->
 
-      <div id="categories" class="section wow fadeIn">
+      <div id="categories" class="grid section wow fadeIn">
          <div class="container">
             <div class="heading">
                <h2>Categories</h2>
