Icon changed, Theme color added

--- a/product/face-sheild.html
+++ b/product/face-sheild.html
@@ -11,9 +11,10 @@
 	<meta name="keywords" content="sheild, Face Sheild, face, protection, safety, digi, phar, digiphar, in, india, covid, 19, covid-19, corona, virus, medical, health, care, digital, suit, precautions, skrn, inc, buy, products, sanitiser, branded, equipment, all, hospital, lockdown">
 	<meta name="description" content="Best in supplying medical equipments. See All Products. Special Products for COVID-19.">
 	<meta name="author" content="Harshit">
+	<meta name="theme-color" content="#39b49a">
 	<!-- Site Icons -->
-	<link rel="shortcut icon" href="../images/fevicon.ico.png" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
+	<link rel="shortcut icon" href="../images/fevicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="../images/icon-logo.png">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<!-- Our Custom CSS -->
