--- a/index.html
+++ b/index.html
@@ -73,17 +73,10 @@
                      </ul>
                   </div>
                </nav>
+			   
                <div class="serch-bar">
-                  <div id="custom-search-input">
-                     <div class="input-group col-md-12">
-                        <input type="text" class="form-control input-lg" placeholder="Search" />
-                        <span class="input-group-btn">
-                        <button class="btn btn-info btn-lg" type="button">
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                        </button>
-                        </span>
-                     </div>
-                  </div>
+					<script async src="https://cse.google.com/cse.js?cx=013174992686940570287:az9mzqyrg4u"></script>
+					<div class="gcse-search"></div>
                </div>
             </div>
          </div>
