--- a/product/mask.html
+++ b/product/mask.html
@@ -180,10 +180,10 @@
 			    });
 				
 				var products = [
-					{name:"3PLY",location:"../images/products/mask/3ply.jpg"},
-					{name:"4PLY",location:"../images/products/mask/4ply.jpeg"},
-					{name:"5PLY",location:"../images/products/mask/5ply.jpeg"},
-					{name:"CN-95",location:"../images/products/mask/cn95.jpeg"},
+					{name:"3PLY Mask",location:"../images/products/mask/3ply.jpg"},
+					{name:"4PLY Mask",location:"../images/products/mask/4ply.jpeg"},
+					{name:"5PLY Masks",location:"../images/products/mask/5ply.jpeg"},
+					{name:"CN-95 Mask",location:"../images/products/mask/cn95.jpeg"},
 					{name:"KN-95",location:"../images/products/mask/kn95.jpg"},
 					{name:"N-95",location:"../images/products/mask/n95.jpg"},
 					{name:"PM - 2.5",location:"../images/products/mask/pm2.5.jpg"}
