--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -13,11 +13,11 @@
 			<a href="#medical-consumables-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-consumables')">Medical Consumables</a>
 			<ul class="collapse list-unstyled" id="medical-consumables-sm">
 				<li><a href="#">CoverAll Suit</a></li>
-				<li><a href="http://localhost/DigiPhar-Website/product/mask.html">Mask</a></li>
-				<li><a href="http://localhost/DigiPhar-Website/product/gloves.html">Gloves</a></li>
-				<li><a href="http://localhost/DigiPhar-Website/product/face-sheild.html">Face Shield</a></li>
-				<li><a href="http://localhost/DigiPhar-Website/product/goggles.html">Goggles</a></li>
-				<li><a href="http://localhost/DigiPhar-Website/product/sanitizers.html">Sanitizers</a></li>
+				<li><a href="https://digiphar.in/product/mask.html">Mask</a></li>
+				<li><a href="https://digiphar.in/product/gloves.html">Gloves</a></li>
+				<li><a href="https://digiphar.in/product/face-sheild.html">Face Shield</a></li>
+				<li><a href="https://digiphar.in/product/goggles.html">Goggles</a></li>
+				<li><a href="https://digiphar.in/product/sanitizers.html">Sanitizers</a></li>
 				<li><a href="#">Bio Hazard Bag</a></li>
 				<li><a href="#">Shoe Cover</a></li>
 			</ul>
