--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -12,14 +12,14 @@
 		<li>
 			<a href="#medical-consumables-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-consumables')">Medical Consumables</a>
 			<ul class="collapse list-unstyled" id="medical-consumables-sm">
-				<li><a href="#">CoverAll Suit</a></li>
+				<li><a href="https://digiphar.in/categories.html#medical-consumables">CoverAll Suit</a></li>
 				<li><a href="https://digiphar.in/product/mask.html">Mask</a></li>
 				<li><a href="https://digiphar.in/product/gloves.html">Gloves</a></li>
 				<li><a href="https://digiphar.in/product/face-sheild.html">Face Shield</a></li>
 				<li><a href="https://digiphar.in/product/goggles.html">Goggles</a></li>
 				<li><a href="https://digiphar.in/product/sanitizers.html">Sanitizers</a></li>
-				<li><a href="#">Bio Hazard Bag</a></li>
-				<li><a href="#">Shoe Cover</a></li>
+				<li><a href="https://digiphar.in/categories.html#medical-consumables">Bio Hazard Bag</a></li>
+				<li><a href="https://digiphar.in/categories.html#medical-consumables">Shoe Cover</a></li>
 			</ul>
 		</li>
 		<li>
@@ -30,6 +30,7 @@
 				<li><a href="#">Fogging Machine</a></li>
 				<li><a href="#">Pocket Devices</a></li>
 				<li><a href="#">Spray Machine</a></li>
+				<li><a href="#">Thermometer</a></li>
 			</ul>
 		</li>
 		<li>
@@ -39,10 +40,10 @@
 			<a onclick="go('#hospital-furnitures')">Hospital Furnitures</a>
 		</li>
 		<li>
-			<a>Medical Aids</a>
+			<a>Medical Aids<i class="fa fa-ban right"></i></a>
 		</li>
 		<li>
-			<a>Medical Equipments</a>
+			<a>Medical Equipments<i class="fa fa-ban right"></i></a>
 		</li>
 	</ul>
 </nav>
