--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -25,7 +25,7 @@
 		<li>
 			<a href="#medical-devices-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-devices')">Medical Devices</a>
 			<ul class="collapse list-unstyled" id="medical-devices-sm">
-				<li><a href="#">Automatic Sanitiser</a></li>
+				<li><a href="#">Automatic Sanitizers</a></li>
 				<li><a href="#">Sanitizer Mop</a></li>
 				<li><a href="#">Fogging Machine</a></li>
 				<li><a href="#">Pocket Devices</a></li>
