--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -26,11 +26,11 @@
 			<a href="#medical-devices-sm" data-toggle="collapse" aria-expanded="false" onclick="go('#medical-devices')">Medical Devices</a>
 			<ul class="collapse list-unstyled" id="medical-devices-sm">
 				<li><a href="https://digiphar.in/product/automatic-sanitizer-device.html">Automatic Sanitizers</a></li>
-				<li><a href="#">Sanitizer Mop</a></li>
+				<li><a href="https://digiphar.in/categories.html#medical-devices">Sanitizer Mop</a></li>
 				<li><a href="https://digiphar.in/product/fogging-machine.html">Fogging Machine</a></li>
 				<li><a href="#">Pocket Devices</a></li>
 				<li><a href="#">Spray Machine</a></li>
-				<li><a href="#">Thermometer</a></li>
+				<li><a href="https://digiphar.in/product/thermometer.html">Thermometer</a></li>
 			</ul>
 		</li>
 		<li>
