--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -28,7 +28,7 @@
 				<li><a href="https://digiphar.in/product/automatic-sanitizer-device.html">Automatic Sanitizers</a></li>
 				<li><a href="https://digiphar.in/categories.html#medical-devices">Sanitizer Mop</a></li>
 				<li><a href="https://digiphar.in/product/fogging-machine.html">Fogging Machine</a></li>
-				<li><a href="#">Pocket Devices</a></li>
+				<li><a href="https://digiphar.in/product/pocket-device.html">Pocket Devices</a></li>
 				<li><a href="#">Spray Machine</a></li>
 				<li><a href="https://digiphar.in/product/thermometer.html">Thermometer</a></li>
 			</ul>
