--- a/categories.html
+++ b/categories.html
@@ -412,10 +412,19 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!-- jQuery Custom Scroller CDN -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-		<script type="text/javascript">
+		<script type="text/javascript">			
+			$(window).load(function(){
+				if($('.header-bottom').css('visibility') == 'hidden'){
+					var activediv = $(location).attr('hash');
+					if(activediv != ''){
+						$('.header-bottom').css('visibility','visible');
+						$('.header-top').css('visibility','visible');
+					}
+				}
+			});
 			$(function(){
 				var activediv = $(location).attr('hash');
-				if(!activediv == '')
+				if(activediv != '')
 					go(activediv);
 			})
 			$(document).ready(function () {
