--- a/product/spray-machine.html
+++ b/product/spray-machine.html
@@ -182,8 +182,8 @@
 				var products = [
 					{name:"Euronics Spray Machine",location:"../images/products/spray machines/euronics.jpg"},
 					{name:"Hand Held Spray Machine",location:"../images/products/spray machines/small spray machine.jpg"},
-					{name:"Hymark Spray Machine",location:"../images/products/spray machines/spray machine.jpg"},
-				
+					{name:"Hymark Spray Machine",location:"../images/products/spray machines/spray machine.jpg"}
+				];
 				for(i=0;i<products.length;i++){
 					html = '<div class="col-md-3 col-sm-4 col-xs-6"><div class="service-widget"><div class="post-media wow fadeIn"><img src="' + products[i].location + '" alt="' + products[i].name + '" class="img-responsive"></div><h3>' + products[i].name + '</h3></div></div>';
 					$('#pop').append(html);
