--- a/product/mask.html
+++ b/product/mask.html
@@ -110,7 +110,7 @@
 							<div class="col-md-12 col-sm-12">
 								<div class="text-contant">
 									<h2>
-										<a href="#" style="color:white;" class="typewrite" data-period="2000" data-type='[ "Masks", "<i>Masks</i>", "<u>Masks</u>" ]'>
+										<a href="#" style="color:white;" class="typewrite" data-period="2000" data-type='[ "Masks", "<i>Mask</i>", "<u>Masks</u>" ]'>
 										<span class="wrap"></span>
 										</a>
 									</h2>
