--- a/category-sidebar.html
+++ b/category-sidebar.html
@@ -17,7 +17,7 @@
 				<li><a href="https://digiphar.in/product/gloves.html">Gloves</a></li>
 				<li><a href="https://digiphar.in/product/face-sheild.html">Face Shield</a></li>
 				<li><a href="https://digiphar.in/product/goggles.html">Goggles</a></li>
-				<li><a href="https://digiphar.in/product/sanitizers.html">Sanitizers</a></li>
+				<li><a href="https://digiphar.in/product/sanitizer.html">Sanitizers</a></li>
 				<li><a href="https://digiphar.in/categories.html#medical-consumables">Bio Hazard Bag</a></li>
 				<li><a href="https://digiphar.in/categories.html#medical-consumables">Shoe Cover</a></li>
 			</ul>
