--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
    <link rel="stylesheet" href="css/responsive.css">
    <!-- Custom CSS -->
    <link rel="stylesheet" href="css/custom.css">
+   <!-- Slider CSS -->
+   <link rel="stylesheet" href="css/w3.css">
    <!-- Modernizer for Portfolio -->
    <script src="js/modernizer.js"></script>
    <!-- [if lt IE 9] -->
+   
+   <style>
+		.reviewSlide{
+			visibility: hidden;
+		}
+   </style>
+   
    </head>
    <body class="clinic_version">
       <!-- LOADER -->
@@ -415,7 +424,62 @@ Not only our products abide to ISO 9001:2015, and CE standards, but we also cons
                   </div>
                </form>
             </div>
-            <div id="googleMap" style="width:100%;height:450px;"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15176426.064240016!2d67.30222665964567!3d21.773210467747386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1589274814542!5m2!1sen!2sin" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+            <div style="width:100%;height:450px;">
+				<div style="float:right; width:60%; height:80%;" class="w3-content w3-display-container">
+					<h2 class="center"><br>What our Customs say</h2>
+				  <div class="reviewSlide w3-container">
+					<div class="testimonial">
+					 <div class="desc">
+						<h3><i class="fa fa-quote-left"></i> The amazing clinic! Wonderful Support!</h3>
+						<p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+					 </div>
+					 <div class="testi-meta">
+						<img src="images/testi_01.png" alt="" class="img-responsive alignleft">
+						<h4>James Fernando <small>- Manager of Racer</small></h4>
+					 </div>
+					</div>
+				  </div>
+				  <div class="reviewSlide w3-container">
+					<div class="testimonial">
+                     <div class="desc">
+                        <h3><i class="fa fa-quote-left"></i> Thanks for Help us!</h3>
+                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                     </div>
+                     <div class="testi-meta">
+                        <img src="images/testi_02.png" alt="" class="img-responsive alignleft">
+                        <h4>Andrew Atkinson <small>- Life Manager</small></h4>
+                     </div>
+                  </div>
+				  </div>
+				  <div class="reviewSlide w3-container">
+					<div class="testimonial">
+                     <div class="desc">
+                        <h3><i class="fa fa-quote-left"></i> The amazing clinic! Wonderful Support!</h3>
+                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                     </div>
+                     <div class="testi-meta">
+                        <img src="images/testi_03.png" alt="" class="img-responsive alignleft">
+                        <h4>Amanda DOE <small>- Manager of Racer</small></h4>
+                     </div>
+                  </div>
+				  </div>
+				  <div class="reviewSlide w3-container">
+					<div class="testimonial">
+                     <div class="desc">
+                        <h3><i class="fa fa-quote-left"></i> Thanks for Help us!</h3>
+                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                     </div>
+                     <div class="testi-meta">
+                        <img src="images/testi_01.png" alt="" class="img-responsive alignleft">
+                        <h4>Martin Johnson <small>- Founder of Goosilo</small></h4>
+                     </div>
+                  </div>
+				  </div>
+
+				  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+				  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+				</div>
+			</div>
          </div>
       </div>
 	  
@@ -452,6 +516,38 @@ Not only our products abide to ISO 9001:2015, and CE standards, but we also cons
 		  $("#footer").load("footer.html");
 		  $(".copyright-area").load("copyright.html");
 		});
+		
+		
+		//---------- Slider JS ----------
+		var slideIndex = 1;
+		carousel();
+
+		function plusDivs(n) {
+		  showDivs(slideIndex += n);
+		}
+
+		function showDivs(n) {
+		  var i;
+		  var x = document.getElementsByClassName("reviewSlide");
+		  if (n > x.length) {slideIndex = 1}
+		  if (n < 1) {slideIndex = x.length}
+		  for (i = 0; i < x.length; i++) {
+			x[i].style.visibility = "hidden";  
+		  }
+		  x[slideIndex-1].style.visibility = "visible";  
+		}
+
+		function carousel() {
+		  var i;
+		  var x = document.getElementsByClassName("reviewSlide");
+		  for (i = 0; i < x.length; i++) {
+			x[i].style.visibility = "hidden"; 
+		  }
+		  slideIndex++;
+		  if (slideIndex > x.length) {slideIndex = 1} 
+		  x[slideIndex-1].style.visibility = "visible"; 
+		  setTimeout(carousel, 4000); 
+		}
 	  </script>
    </body>
 </html>
