Contact Us to Feedback

--- a/categories.html
+++ b/categories.html
@@ -84,7 +84,7 @@
 										<li><a class="active sidebarActivate" href="#">Products</a></li>
 										<li><a href="index.html#enquire">Enquire</a></li>
 										<!-- <li><a href="index.html#testimonials">Testimonials</a></li> -->
-										<li><a href="index.html#getintouch">Contact Us</a></li>
+										<li><a href="index.html#getintouch">Feedback</a></li>
 									</ul>
 								</div>
 							</nav>
