--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <li><a data-scroll href="#aboutus">About Us</a></li>
                         <li><a data-scroll href="categories.html">Products</a></li>
                         <li><a data-scroll href="#enquire">Enquire</a></li>
-                        <li><a data-scroll href="#getintouch">Contact Us</a></li>
+                        <li><a data-scroll href="#getintouch">Feedback</a></li>
                      </ul>
                   </div>
                </nav>
